--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ eframe = "0.31"
 egui = "0.31.1"
 log = { version = "0.4", features = ["std"] }
 env_logger = "0.11.8"
+ndarray = "0.16.1"
+static_assertions = "1.1.0"
