--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ egui = "0.31.1"
 log = { version = "0.4", features = ["std"] }
 env_logger = "0.11.8"
 ndarray = "0.16.1"
+strum = "0.27.2"
+strum_macros = "0.27.2"
